# termist

./: Cargo.toml  README.md  notes.md
termist/: Cargo.toml
termist/src/: cli.rs  clipboard.rs  event.rs  ipc.rs  logging.rs  main.rs  message_bar.rs  panic.rs  window_context.rs
termist/src/config/: bell.rs  bindings.rs  color.rs  cursor.rs  debug.rs  font.rs  mod.rs  monitor.rs  mouse.rs  scrolling.rs  selection.rs  terminal.rs  ui_config.rs  window.rs
termist/src/display/: color.rs  content.rs  cursor.rs  damage.rs  hint.rs  meter.rs  mod.rs  window.rs
termist/src/input/: keyboard.rs  mod.rs
termist/src/renderer/: mod.rs  rects.rs
termist/src/renderer/text/: gles2.rs  glsl3.rs  mod.rs
termist_config/: Cargo.toml
termist_config/src/: lib.rs  main.rs
termist_config_derive/: Cargo.toml
termist_config_derive/src/: lib.rs  main.rs  serde_replace.rs
termist_config_derive/src/config_deserialize/: de_enum.rs  de_struct.rs
termist_terminal/: Cargo.toml
termist_terminal/src/: event_loop.rs  lib.rs  main.rs
termist_terminal/src/grid/: resize.rs
termist_terminal/src/term/: cell.rs  mod.rs  search.rs
termist_terminal/src/tty/: mod.rs  unix.rs
termist_terminal/src/tty/windows/: blocking.rs  conpty.rs
