[package]
name = "termist_config_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "2.0.16", features = ["derive", "parsing", "proc-macro", "printing"], default-features = false }

[dev-dependencies.termist_config]
path = "../termist_config"
version = "0.1.0"

[dev-dependencies]
log = "0.4.11"
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.8.2"